# exam_schooll

./: Makefile  TODO  pyproject.toml
apps/: managers.py  models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py
root/: settings.py  urls.py  wsgi.py
