[tool.poetry]
name = "exam-schooll"
version = "0.1.0"
description = ""
authors = ["sbekzod1111 <sbekzod150@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.6.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
